# idle-trigger

./: Cargo.toml  README.md  build.rs  default.nix  example-config.toml  flake.nix  shell.nix
.github/workflows/: action.yml
src/: main.rs
